[package]
name = "crevice"
description = "Create GLSL-compatible versions of structs with explicitly-initialized padding"
version = "0.7.1"
edition = "2018"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
documentation = "https://docs.rs/crevice"
homepage = "https://github.com/LPGhatguy/crevice"
repository = "https://github.com/LPGhatguy/crevice"
readme = "README.md"
keywords = ["glsl", "std140", "std430"]
license = "MIT OR Apache-2.0"
resolver = "2"

[patch.crates-io]
mint = { git = "https://github.com/LPGhatguy/mint", branch = "into-mint" }
glam = { git = "https://github.com/LPGhatguy/glam-rs", branch = "into-mint" }

[features]
default = ["std"]
std = []

[workspace]
members = ["crevice-derive", "crevice-tests"]
default-members = ["crevice-derive", "crevice-tests"]

[dependencies]
crevice-derive = { version = "0.7.1", path = "crevice-derive" }

bytemuck = "1.4.1"
mint = "0.5.5"

[dev-dependencies]
cgmath = { version = "0.17.0", features = ["mint"] }
insta = "0.16.1"
