[package]
name = "crevice"
description = "Create GLSL-compatible versions of structs with explicitly-initialized padding"
version = "0.11.0"
rust-version = "1.58.0"
edition = "2021"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
documentation = "https://docs.rs/crevice"
homepage = "https://github.com/LPGhatguy/crevice"
repository = "https://github.com/LPGhatguy/crevice"
readme = "README.md"
keywords = ["glsl", "std140", "std430"]
license = "MIT OR Apache-2.0"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []
test-all-math-libraries = ["cgmath", "glam", "nalgebra"]

[workspace]
members = [".", "crevice-derive", "crevice-tests"]
default-members = [".", "crevice-derive", "crevice-tests"]

[dependencies]
crevice-derive = { version = "0.10.0", path = "crevice-derive" }

bytemuck = "1.12.3"
mint = "0.5.9"

cgmath = { version = "0.18.0", optional = true }
glam = { version = "0.22.0", features = ["mint"], optional = true }
nalgebra = { version = "0.31.3", features = ["mint"], optional = true }

[dev-dependencies]
insta = "1.21.0"

[package.metadata."docs.rs"]
all-features = true
