[package]
name = "crevice-tests"
version = "0.1.0"
edition = "2018"

[features]
default = ["std"]
std = ["crevice/std"]
wgpu-validation = ["std", "wgpu", "naga", "futures"]

[dependencies]
crevice = { path = "..", default-features = false }
crevice-derive = { path = "../crevice-derive", features = ["debug-methods"] }

anyhow = "1.0.44"
bytemuck = "1.7.2"
memoffset = "0.9"
mint = "0.5.5"

futures = { version = "0.3.17", features = ["executor"], optional = true }
naga = { version = "22", features = ["glsl-in", "wgsl-out"], optional = true }
wgpu = { version = "22", optional = true }
